# synthetic-loan-example

./: .gitignore  README.md  pyproject.toml
notebooks/: synthetic_loan_example.ipynb
synthetic_data/: synthetic.py
